--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ post_footer: true            # show previous and next links at the end of each p
 date_format: "%B %d, %Y"     # see http://shopify.github.io/liquid/filters/date/
 
 # Theme settings
-dark_theme: false            # enables dark mode
+dark_theme: true            # enables dark mode
 dark_header: false           # uses dark header whether dark_theme is enabled or not
 minimal_theme: false         # radically minimalistic theme
 
@@ -27,9 +27,6 @@ icons:                       # (optional) fontawesome icons in the header
   github: "https://github.com"
   rss: "/feed.xml"
 
-comments:                    # embed disqus or isso comments
-#  disqus: ""
-#  isso: ""
 
 plugins: 
  - jekyll-feed
