--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ icons:                       # (optional) fontawesome icons in the header
   envelope: "mailto:addison@akimball.com"
   github: "https://github.com/awkimball"
   twitter: "https://twitter.com/awkimball"
+  key: "http://ix.io/1y9L"
 
 plugins: 
  - jekyll-feed
